<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        android:background="@color/main">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/bowlby_one"
            android:text="HEALTH\n CALC"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/iv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/burn64"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/tv_titulo"
            android:layout_alignBottom="@id/tv_titulo"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_wave_top"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/wave_down"
        android:scaleType="fitXY"
        android:layout_below="@+id/rl_header"
        />

    <ImageView
        android:id="@+id/iv_wave_bottom"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/wave_up"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/allerta"
        android:text="Desenvolvido por DS2T-A"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/iv_wave_bottom"
        android:layout_below="@+id/iv_wave_top"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login_title"
                android:textAppearance="@style/titulo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login_subtitle"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/Login_et_email"
                app:endIconMode="clear_text">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/Login_et_password"
                app:passwordToggleEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_entrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_entrar"
                style="@style/button_login"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/login_lembrar_me" />

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_esqueci"
                android:textAllCaps="false"
                android:layout_gravity="end"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_nao_tem_conta"/>

                <Button
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_criar_conta"
                    android:textAllCaps="false"
                    android:layout_gravity="end"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>