<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="end">

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/froes"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/exercicio_peso"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/peso_title"
            android:paddingStart="20dp"
            android:textFontWeight="@integer/material_motion_duration_short_2"
            style="@style/cadastro_peso_titulo"/>

        <TextView
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_peso"
            android:layout_gravity="center"
            android:drawableStart="@drawable/info_24"
            android:drawablePadding="10dp"
            android:textFontWeight="@integer/material_motion_duration_long_1"
            style="@style/info_peso"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="35dp"
        android:paddingEnd="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/accessibility_40"
            android:drawablePadding="10dp"
            android:text="@string/dados_pesagem_title"
            android:gravity="bottom"
            style="@style/title_peso"
            />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/cadastro_titulo"
            android:text="@string/data_pesagem"/>

        <TextView
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25/11/2021"
            android:textFontWeight="@integer/material_motion_duration_long_1"
            style="@style/dados_peso"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/cadastro_titulo"
            android:text="Nivel de atividade"/>

        <Spinner
            android:id="@+id/spinner_atividade"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:entries="@array/spinner_list"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/cadastro_titulo"
            android:text="Nivel de atividade"/>


    </LinearLayout>

</LinearLayout>